Changed src folder structure to structure before initial commit. Updated business API calls to be contained with the businessRoutes.js file, and fetch favourite count,

--- a/views/business.ejs
+++ b/views/business.ejs
@@ -40,6 +40,7 @@
                 <div class="rating">
                     <i class="bi bi-star-fill"></i> <span id="rating"></span>
                     <span id="review-count"></span>
+                    <span id="favourite-count"></span>
                 </div>
 
                 <div id="categories" class="categories"></div>
