Updated business page to match main and profile page. Made the site name on the navbar clickable to bring you back to the main page. Attempted to use Electron to make the site work in an application (needs to be fixed)

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,14 +4,20 @@
         <title>Profile | Byte-Sized Business Boost</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="css/base.css">
-        <link rel="stylesheet" href="css/layout.css">
-        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="./profile/css/base.css">
+        <link rel="stylesheet" href="./profile/css/layout.css">
+        <link rel="stylesheet" href="./profile/css/navbar.css">
     </head>
     <body>
         <nav class="navbar navbar-main content-container">
             <div class="navbar-inner">
-                <span class="navbar-brand">Byte-Sized Business Boost</span>
+                <div class="flex center">
+                    <a href="/" class="btn btn-sm">
+                        <span class="navbar-brand">
+                            Byte-Sized Business Boost
+                        </span>
+                    </a>
+                </div>
 
                 <div class="d-flex align-items-center gap-3">
                     <span id="roleBadge" class="badge bg-secondary">Guest</span>
@@ -40,6 +46,6 @@
             </section>
         </main>
 
-        <script src="profile.js"></script>
+        <script src="./profile/profile.js"></script>
     </body>
 </html>
