--- a/views/business.ejs
+++ b/views/business.ejs
@@ -4,11 +4,11 @@
         <title>Business | Byte-Sized Business Boost</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./business/css/base.css">
-        <link rel="stylesheet" href="./business/css/layout.css">
-        <link rel="stylesheet" href="./business/css/navbar.css">
-        <link rel="stylesheet" href="./business/css/business.css">
-        <link rel="stylesheet" href="./business/css/reviews.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/navbar.css">
+        <link rel="stylesheet" href="css/business.css">
+        <link rel="stylesheet" href="css/reviews.css">
     </head>
     <body>
         <!-- NAVBAR -->
@@ -111,9 +111,9 @@
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="./business/js/auth.js"></script>
-        <script src="./business/js/businessDetail.js"></script>
-        <script src="./business/js/reviewPosting.js"></script>
-        <script src="./business/js/favouriting.js"></script>
+        <script src="js/auth.js"></script>
+        <script src="js/businessDetail.js"></script>
+        <script src="js/reviewPosting.js"></script>
+        <script src="js/favouriting.js"></script>
     </body>
 </html>
