--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Login | Byte-Sized Business Boost</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="./login/login.css">
+        <link rel="stylesheet" href="login.css">
     </head>
     <body class="p-5">
         <script>
@@ -46,7 +46,7 @@
         </div>
 
         <script src="https://accounts.google.com/gsi/client" async defer></script>
-        <script src="./login/auth.js"></script>
+        <script src="auth.js"></script>
         <script>
             // Guest login
             document.getElementById("guestBtn").addEventListener("click", async () => {
