--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,9 +4,9 @@
         <title>Profile | Byte-Sized Business Boost</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-        <link rel="stylesheet" href="./profile/css/base.css">
-        <link rel="stylesheet" href="./profile/css/layout.css">
-        <link rel="stylesheet" href="./profile/css/navbar.css">
+        <link rel="stylesheet" href="css/base.css">
+        <link rel="stylesheet" href="css/layout.css">
+        <link rel="stylesheet" href="css/navbar.css">
     </head>
     <body>
         <nav class="navbar navbar-main content-container">
@@ -46,6 +46,6 @@
             </section>
         </main>
 
-        <script src="./profile/profile.js"></script>
+        <script src="profile.js"></script>
     </body>
 </html>
