--- a/public/profile/css/layout.css
+++ b/public/profile/css/layout.css
@@ -1,5 +1,6 @@
 /* Centered content column */
 .content-container {
+    width: 100%;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 24px;
