--- a/views/business.ejs
+++ b/views/business.ejs
@@ -165,7 +165,11 @@
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
         <script src="js/auth.js"></script>
-        <script src="js/businessDetail.js"></script>
+        <script src="js/business/constants.js"></script>
+        <script src="js/business/utils.js"></script>
+        <script src="js/business/renderers.js"></script>
+        <script src="js/business/api.js"></script>
+        <script src="js/business/details.js"></script>
         <script src="js/reviewPosting.js"></script>
         <script src="js/favouriting.js"></script>
     </body>
