--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -104,6 +104,10 @@
         </footer>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <script src="/profile/profile.js"></script>
+        <script src="/profile/js/constants.js"></script>
+        <script src="/profile/js/utils.js"></script>
+        <script src="/profile/js/api.js"></script>
+        <script src="/profile/js/renderers.js"></script>
+        <script src="/profile/js/profile.js"></script>
     </body>
 </html>
