--- a/views/business.ejs
+++ b/views/business.ejs
@@ -172,6 +172,7 @@
         </script>
 
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="/index/js/utils/color.js"></script>
         <script src="js/auth.js"></script>
         <script src="js/business/constants.js"></script>
         <script src="js/business/utils.js"></script>
