--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Profile | Byte-Sized Business Boost</title>
+        <link rel="icon" type="image/x-icon" href="/images/site/icon.svg">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="/profile/css/base.css">
@@ -17,10 +18,12 @@
         <nav class="navbar navbar-main content-container">
             <div class="navbar-inner">
                 <div class="flex center">
-                    <a href="/" class="btn btn-sm">
-                        <span class="navbar-brand">
-                            Byte-Sized Business Boost
-                        </span>
+                    <a href="/" class="btn btn-sm" aria-label="Byte-Sized Business Boost home">
+                        <img
+                            src="/images/site/logo.svg"
+                            class="navbar-brand"
+                            alt="Byte-Sized Business Boost"
+                        >
                     </a>
                 </div>
 
