--- a/views/business.ejs
+++ b/views/business.ejs
@@ -117,8 +117,8 @@
                 <section class="business-section">
                     <h3>Reviews</h3>
                     <div id="review-box" class="review-box">
-                        <textarea placeholder="Write a review..."></textarea>
-                        <button>Post Review</button>
+                        <textarea maxlength="1000" placeholder="Write a review..."></textarea>
+                        <button type="button">Post Review</button>
                     </div>
 
                     <div id="review-list"></div>
